--- a/Pertemuan 1/Latihan-1.html
+++ b/Pertemuan 1/Latihan-1.html
@@ -9,9 +9,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Rafif" />
+<meta name="author" content="Arantxa Aulia" />
 
-<meta name="date" content="2025-08-25" />
+<meta name="date" content="2025-08-26" />
 
 <title>Latihan 1</title>
 
@@ -351,8 +351,8 @@ display: none;
 
 
 <h1 class="title toc-ignore">Latihan 1</h1>
-<h4 class="author">Rafif</h4>
-<h4 class="date">2025-08-25</h4>
+<h4 class="author">Arantxa Aulia</h4>
+<h4 class="date">2025-08-26</h4>
 
 </div>
 
